fixed sticky thingie with z-index

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -60,6 +60,7 @@ video {
 .sticky-banner {
   position: fixed;
   background-color: var(--neutral-dark);
+  z-index: 20;
 }
 
 .banner-background {
